# hackathon

./: .gitignore
algorithm/: fst.py  graph.py
algorithm/hashmap/: Makefile  hash.c  hash.h  test.c
algorithm/rbtree/: CMakeLists.txt  main.c  red_black_tree.c
asr/: mp3_to_wav.py
asr/cnvad/: CMakeLists.txt
asr/cnvad/model/: mdl_d16t1.0.h  mdl_d16t1.2.h  mdl_d16t1.2_conf.h
asr/cnvad/src/: ccnn_core.c  ccnn_core.h  cnvad.c  cnvad.h  cnvadtest.c  fft.c  fft.h  fft_tool.c  fft_tool.h  libcnvad.ver  main.c  mmath.h  pocketfft.c  pocketfft.h  project_config.h  ring_buf.c  ring_buf.h  test.c  vad.c  vad.h
asr/cnvad/src/dqvad/: dqvad.c  dqvad.h  dqvad_intr.h  ringarray.h
asr/cnvad/src/engine/: ringarray.h  vad_engine.c  vad_engine.h  vad_engine_intr.h
asr/cnvad/src/inst_vad/: inst_vad.c  inst_vad.h
asr/noise/: mixnoise.py
asr/noise/696/: 696noi.txt
asr/noise/nr/: build.sh  denoise.c  smallft.h  speexdsp_config_types.h  speexdsp_types.h  test.c  test_normal.c
asr/nr/: arch.h  denoise.h  errno.h  fftwrap.c  kiss_fft.h  kiss_fftr.h  os_support.h  smallft.c
asr/vad/: Makefile  test_vad.c  vad.c  vad.h  vad.py
benchmark/: merge_lora_adapter.py
benchmark/qwen/: qwen_vlm.sh
cav_build/: run.py
machine_learning/dbscan/: dbscan.py
tools/ringbuffer/: Makefile  main.c  ringbuffer.c  ringbuffer.h
tools/text/: process_paragraph_log.sh  text_tools.c
transformer/: config.py  data.py  draw.py  test_encoder_decoder.py  train.py
transformer/model/: decoder.py  embedding.py  encoder.py  feed_forward.py  layer_norm.py  multi_head_attention.py  positional_encoding.py  scale_dot_product_attention.py  transformer.py
transformer/util/: bleu.py  data_loader.py  epoch_timer.py  tokenizer.py
